public/css/admin.css
div {
    margin: 0 auto;
}

div.mgmt {
    width: 100%;
    border-radius: 12px;
    box-shadow: 0px 0px 12px 0px #cacaca;
    border: 2px solid var(--teal);
    padding: 8px;
    text-align: center;
}

div.mgmt > p {
    margin: 5px;
}

h3 {
    margin: 0 auto;
    margin-bottom: 8px;
    text-align: center;
}

div#checked-out-books-container {
    padding: 8px;
    position: relative;
}

div#checked-out-books-container > .book {
    width: 100%;
    height: 120px;
    margin: 0;
    margin-bottom: 12px;
}

#edit-entry-search-results {
    margin: 0px;
    margin-top: 8px;
    overflow-y: scroll;
    position: relative;
    /*border: 3px solid var(--teal);*/
    width: calc(100% + 16px);
    display: none;
    left: -8px;
    max-height: 730px;
    padding: 4px 6px;
}

div#edit-entry-search-results > .book {
    width: 100%;
    height: auto;
    margin: 0;
    margin-bottom: 12px;
}

#management-grid {
    margin: 0 auto;
    margin-top: 10px;
    display: grid;
    width: 80%;
    grid-template-columns: 25% 25% 25% 25%;
    grid-template-rows: 200px 200px 200px 200px;
    gap: 16px 16px;
    justify-items: stretch;
    align-items: stretch;
    position: relative;
    left: -32px;
}

#add-entry {
    grid-column: 4;
    grid-row: 1 / 3;
}

#edit-entry {
    grid-column: 3 / 4;
    grid-row: 1 / 5;
    position: relative;
}

#checked-out {
    grid-column: 1 / 3;
    grid-row: 1 / 5;
}

#report {
    grid-column: 4 / 5;
    grid-row: 3 / 5;
}

.book {
    height: 150px;
}

#last-updated {
    margin-bottom: 32px;
}


#inventory-popup {
    display: none;
    z-index: 1000;
    width: 100%;
    height: 100%;
    position: absolute;
    top: 0;
    left: 0;
    background-color: #90a23955;
}

#inventory-popup-box {
    background-color: white;
    border: 8px solid var(--teal);
    min-width: 600px;
    min-height: 400px;
    width: 30%;
    height: 20%;
    position: fixed;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    border-radius: 8px;
    margin: 0 auto;
    padding: 8px;
}

.hidden-input {
    opacity: 0;
    position: fixed;
    top: -20px;
    left: -200px;
}

.deleted {
    background-color: #ff9999;
    text-decoration: line-through;
    text-decoration-thickness: 2px;
}

.deleted > * {
    opacity: 0.7;
}

.userimage {
    max-height: 150px;
    float: left;
    user-select: none;
    border-radius: 200px;
    box-shadow: 0px 0px 14px -4px var(--teal);
    /*padding: 4px;*/
    height: 100%;
}




/* Content if screen is large */
@media screen and (max-width: 1440px) {
    #management-grid {
        width: calc(95% - 16px*4);
        position: relative;
        left: -16px;
    }   

}

/* Content if screen is small */
@media screen and (max-width:1024px) {
    #management-grid {
        width: calc(100% - 16px*4);
    }    

    div#edit-entry-search-results > .book {
        height: auto;
        flex-wrap: wrap;
    }

    div#edit-entry-search-results > .book > .bookimage {
        max-height: 100px;
    }

    div#edit-entry-search-results > .book > .basic-info > p, div#edit-entry-search-results > .book > .basic-info > b > p {
        text-align: center;
    }

    
    #management-grid {
        width: calc(100% - 16px*2);
        grid-template-columns: 50% 50%;
        grid-template-rows: 200px 200px 200px 200px 200px 200px 200px 200px;
        left: -8px;
    }

    #add-entry {
        grid-column: 2;
        grid-row: 1 / 3;
    }
    
    #edit-entry {
        grid-column: 1 / 2;
        grid-row: 1 / 5;
    }
    
    #checked-out {
        grid-column: 1 / 3;
        grid-row: 5 / 9;
    }
    
    #report {
        grid-column: 2;
        grid-row: 3 / 5;
    }


}

/* Content if screen is very small */
@media screen and (max-width:786px) {

}

/* Content if screen is really small */
@media screen and (max-width:570px) {
    #management-grid {
        width: calc(100% - 16px*1);
        grid-template-columns: 100%;
        grid-template-rows: 200px 200px 200px 200px 200px 200px 200px 200px 200px 200px 200px 200px 200px 200px;
        left: 0;
    }

    #add-entry {
        grid-column: 1;
        grid-row: 1 / 3;
    }
    
    #edit-entry {
        grid-column: 1;
        grid-row: 3 / 6;
    }
    
    #checked-out {
        grid-column: 1;
        grid-row: 9 / 15;
    }
    
    #report {
        grid-column: 1;
        grid-row: 6 / 9;
    }
}

    
/* Content if screen is super small */
@media screen and (max-width:500px) {
    
}

